# minigrad-x

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  a.cpp  pyproject.toml  setup.py
minigradx/tensor/: _types.py  tensor.py
scripts/: build.sh  install.sh
src/device/: registry.hpp
src/minigradx/: _C.cpp  utils.cpp  utils.hpp
src/registar/: registry.hpp
src/tensor/: buffer.hpp  dtype.hpp  make_tensor_impl.cpp  make_tensor_impl.hpp  shape.cpp  shape.hpp  tensor_impl.hpp  utils.hpp
src/tensor/cpu/: buffer.cpp  buffer.hpp  cpu_impl.cpp  cpu_impl.hpp  impl.cpp  impl.hpp
src/tensor/cuda/: buffer.cpp  buffer.hpp  cuda_impl.cpp  cuda_impl.hpp  impl.cpp  impl.hpp
tests/: test_tensor.py
